# nRF_Connect_SDK

./: Nordic_github - Shortcut.lnk  README.md  usefulLinks.md
Workspace/NCSv2.5.0/CMake/CMake_03_NcsVersion/: CMakeLists.txt
doc/: NCSv2.3.0_01_ProjectFromSample.md  NCSv2.3.0_01_ProjectFromScratch.md  NCSv2.3.0_02_ZephyrLogging.md  NCSv2.3.0_02_ZephyrLogging_declare.md  NCSv2.3.0_02a_ZephyrLogging_minimal.md  NCSv2.3.0_03_User-Defined_KCONFIG.md  NCSv2.3.0_10_ZephyrShell.md  NCSv2.3.0_LicenseReport.md  NCSv2.3.0_ZDD_Sensors_BME280_nRF52840.md  NCSv2.3.0_ZKS_02_fifo.md  NCSv2.3.0_ZKS_Other_01_version.md  NCSv2.3.0_ZKS_Threads_01.md  NCSv2.3.0_ZKS_Threads_BME280.md  NCSv2.3.0_ZKS_Timing_02_Timers.md  NCSv2.4.0_01_ProjectFromScratch.md  NCSv2.4.0_02_ZephyrLogging.md  NCSv2.4.0_02_ZephyrLogging_declare.md  NCSv2.4.0_02_ZephyrLogging_minimal.md  NCSv2.4.0_03_User-Defined_KCONFIG.md  NCSv2.4.0_10_ZephyrShell.md  NCSv2.4.0_ZKS_02_fifo.md  NCSv2.4.0_ZKS_Other_01_version.md  NCSv2.5.0_01_ProjectFromScratch.md  NCSv2.5.0_02_ZephyrLogging.md  NCSv2.5.0_02_ZephyrLogging_minimal.md  NCSv2.5.0_03_User-Defined_KCONFIG.md  NCSv2.5.0_10_ZephyrShell.md  NCSv2.5.0_App_Version.md  NCSv2.5.0_LicenseReport.md  NCSv2.5.0_NCS_Version.md  NCSv2.5.0_ProjectFromScratch.md  NCSv2.5.0_ZDD_SPI_BME280_nRF52840.md  NCSv2.5.0_ZDD_Sensors_BME280_nRF52840-2.md  NCSv2.5.0_ZDD_Sensors_BME280_nRF52840.md  NCSv2.5.0_ZDD_Sensors_BME280_nRF52840_SPI.md  NCSv2.5.0_ZDD_Sensors_BME280_nRF52840_Thread.md  NCSv2.5.0_ZKS_02_fifo.md  NCSv2.5.0_ZKS_Other_01_version.md  NCSv2.5.0_ZKS_Threads_01.md  (+31 more)
(+83 files in other folders)
